apps/oauth2-proxy/overlays/librepod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forwardauth
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    trustForwardHeader: true
    authResponseHeadersRegex:
      - ^X-
    # authResponseHeaders:
    #   - X-Auth-Request-User
    #   - X-Auth-Request-Email
    #   - X-Auth-Request-Groups
    #   - X-Auth-Request-Preferred-Username
    #   - X-Forwarded-User
    #   - X-Forwarded-Email
