apps/oauth2-proxy/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`oauth2-proxy.${BASE_DOMAIN:=libre.pod}`)
    priority: 1
    services:
    - name: oauth2-proxy
      port: 80
